<resources>
    <string name="app_name">RiesgosMovil</string>
    <string name="title_support">ActionBar Drawer</string>
    <string name="title_toolbar">Toolbar Drawer</string>
    <string name="action_settings">Sincronizar</string>
    <string name="action_delete">Consulta catalogos</string>
    <string name="hello_world">Hello world!</string>
    <string name="icon">Spinner</string>
    <string-array name="menu_array">
        <item>Asignaciones</item>
        <item>Crear hallazgo</item>
        <item>Sincronizar</item>
        <item>Cambiar contraseña</item>
    </string-array>
    <string-array name="property_types_description">
        <item>Acuicola descripción</item>
        <item>Presa descripción</item>
        <item>Educación descripción</item>
        <item>Salud descripción</item>
        <item>Infraestructura hidraúlica descripción</item>
        <item>Bienes históricos y arqueologicos descripción</item>
        <item>Infrestructura urbana municipal descripción</item>
        <item>Disposición de residuos descripción</item>
        <item>Caminos con puentes y túneles descripción</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_bitacora">Bitacora</string>
    <string name="action_tools">Configuración general</string>
    <string name="action_maps">Configuración de Mapas</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="lista_asignaciones">Lista de Asignaciones</string>
    <string name="lista_hallazgos">Lista de Hallazgos</string>
    <string name="lista_tuneles">Lista de Túneles</string>
    <string name="lista_puentes">Lista de Puentes</string>
    <string name="sincronizacion">Sincronizacion</string>
    <string name="content_description">ContentDescription</string>
    <string name="title_activity_lista_datos">ListaDatos</string>
    <string name="title_activity_lista_aquaculture">Lista Aquaculture</string>
    <string name="title_images">Lista de imagenes</string>
    <string name="title_map">Mapa de ubicación</string>
    <string name="lista_vacia">Sin Datos</string>
    <string name="seleccionada">Imagen seleccionada</string>
    <string-array name="property_types">
        <item>Acuicola</item>
        <item>Presa</item>
        <item>Educación</item>
        <item>Salud</item>
        <item>Infraestructura hidraúlica</item>
        <item>Bienes históricos y arqueologicos</item>
        <item>Infrestructura urbana municipal</item>
        <item>Disposición de residuos</item>
        <item>Caminos con puentes y túneles</item>
    </string-array>
    <string name="bienvenido">Bienvenido</string>
    <string name="sesion">Sesion</string>
    <string name="title_activity_catalogs">Catalogs</string>
    <string name="title_activity_admin">Propiedades del bien</string>
    <string name="ns_menu_open">Seleccione la opción deseada</string>
    <string name="ns_menu_close">Sistema de Riesgos</string>
    <string name="drawer_text">Navigation Drawer example.</string>
    <string name="ns_menu_main_header">Asignaciones</string>
    <string name="ns_menu_main_header2">Crear hallazgo</string>
    <string name="ns_menu_main_header3">Mapa de bienes</string>
    <string name="ns_menu_main_header4">Sincronización</string>
    <string name="ns_menu_main_header5">Listas</string>
    <string name="aquaculture">Acuicola</string>
    <string name="dams">Presa</string>
    <string name="education">Educación</string>
    <string name="health">Salud</string>
    <string name="hydraulic_infrastructure">Infraestructura hidraúlica</string>
    <string name="historical_and_archaeological">Bienes históricos y arqueologicos</string>
    <string name="urban_infraestructure">Infrestructura urbana municipal</string>
    <string name="waste_disposal">Disposición de residuos</string>
    <string name="ways">Caminos con puentes y túneles</string>
    <string name="val_rep_nuev">Valor de reposición a nuevo</string>
    <string name="valor_real">Valor real</string>
    <string name="bienes">Bienes Históricos y Arqueológicos</string>
    <string name="presas">Presas</string>
    <string name="infra_hidr">Infraestructura Hidráulica</string>
    <string name="identificacion_">Identificación e información general</string>
    <string name="numero_id">Número ID</string>
    <string name="int_num">Introduzca número ID</string>
    <string name="nom_ofi">Nombre oficial</string>
    <string name="int_nom">Introduzca nombre oficial</string>
    <string name="nom_com">Nombre común</string>
    <string name="int_nom_com">Introduzca nombre común</string>
    <string name="estado">Estado</string>
    <string name="int_esta">Introduzca estado</string>
    <string name="region_cna">Región CNA</string>
    <string name="int_region_cna">Introduzca región CNA</string>
    <string name="region_hidro">Región hidrológica</string>
    <string name="int_region_hidro">Introduzca región hidrológica</string>
    <string name="cuenca">Cuenca</string>
    <string name="int_cuenca">Introduzca cuenca</string>
    <string name="corriente">Corriente</string>
    <string name="int_corriente">Introduzca corriente</string>
    <string name="aflu">Afluente</string>
    <string name="int_aflu">Introduzca afluente</string>
    <string name="volu_namo">Volumen al NAMO (hm3)</string>
    <string name="int_volu_namo">Introduzca volumen (hm3)</string>
    <string name="dise">Diseñador</string>
    <string name="int_dise">Introduzca diseñador</string>
    <string name="cons">Constructor</string>
    <string name="int_const">Introduzca constructor</string>
    <string name="orga">Organismo responsable</string>
    <string name="int_orga">Introduzca organismo responsable</string>
    <string name="area">Área (km2)</string>
    <string name="int_area">Introduzca área (km2)</string>
    <string name="carta">Carta INEGI 1:50,000</string>
    <string name="int_carta">Introduzca carta INEGI</string>
    <string name="volumen_max">Volumen máximo de escurrimiento anual</string>
    <string name="int_volumen_max">Introduzca volumen</string>
    <string name="volumen_med">Volumen medio de escurrimiento anual</string>
    <string name="int_volumen_med">Introduzca volumen</string>
    <string name="total_cort">Total decortinas</string>
    <string name="int_total_cort">Introduzca total de cortinas</string>
    <string name="sismicidad">Sismicidad</string>
    <string name="alta">Alta</string>
    <string name="media">Media</string>
    <string name="baja">Baja</string>
    <string name="via_acc">Vía de acceso</string>
    <string name="carretera">Carretera</string>
    <string name="brecha">Brecha</string>
    <string name="terraceria">Terracería</string>
    <string name="uso_agua">Uso del agua</string>
    <string name="prop_cons">Propósito de construcción</string>
    <string name="int_prop_cons">Introduzca propósito de construcción</string>
    <string name="caract_geo">Características Geográficas</string>
    <string name="cp">Código Postal</string>
    <string name="int_cp">Introduzca código postal</string>
    <string name="calle">Calle, número exterior - número interior</string>
    <string name="int_calle">Introduzca calle</string>
    <string name="numero">Número</string>
    <string name="int_numero">Introduzca número</string>
    <string name="colonia">Colonia</string>
    <string name="int_colo">Introduzca colonia</string>
    <string name="municipio">Municipio/delegación</string>
    <string name="int_mun">Introduzca municipio</string>
    <string name="longitud">Longitud</string>
    <string name="int_lon">Introduzca longitud</string>
    <string name="latitud">Latitud</string>
    <string name="int_lat">Introduzca latitud</string>
    <string name="altitud">Altitud</string>
    <string name="int_alt">Introduzca altitud</string>
    <string name="cuerpo">Cuerpo de agua más cercano</string>
    <string name="mar">Mar</string>
    <string name="rio">Río</string>
    <string name="lago">Lago</string>
    <string name="laguna">Laguna</string>
    <string name="exis">¿Existen daños previos por evento natural?</string>
    <string name="expo">Exposición a riesgos de la naturaleza</string>
    <string name="inun">Inundación/lluvia extrema</string>
    <string name="hura">Huracán</string>
    <string name="terre">Terremoto</string>
    <string name="des">Deslave</string>
    <string name="derr">Derrumbe</string>
    <string name="caract_cons">Características Constructivas</string>
    <string name="fecha_const">Fecha de construcción</string>
    <string name="fecha_refu">Fecha en que se reforzó la estructura</string>
    <string name="tipo_estru">Tipo estructural</string>
    <string name="tipo_cime">Tipo cimentación</string>
    <string name="geo_cons">Geometría de la construcción</string>
    <string name="regular">Regular</string>
    <string name="irregular">Irregular</string>
    <string name="est_cons">Estado de conservación</string>
    <string name="tipo_corr">Tipo de corrientes</string>
    <string name="prese_gol">Presencia de golpeteo con otras estructuras</string>
    <string name="espe">Especifique</string>
    <string name="int_espe">Introduzca especificación</string>
    <string name="elevacion">Elevación del desplante de la planta</string>
    <string name="irre_plan">Irregular en la planta</string>
    <string name="irre_ele">Irregular en elevación</string>
    <string name="ninguna">Ninguna</string>
    <string name="prese_mur">Presencia de muros cortos entre columnas de soporte</string>
    <string name="niveles">Niveles (mm)</string>
    <string name="int_niv">Introduzca niveles (mm)</string>
    <string name="gastos">Gastos de agua (lts)</string>
    <string name="int_gas">Introduzca gastos de agua (lts)</string>
    <string name="prese_hun">Presencia de hundimiento</string>
    <string name="grav_hun">Gravedad del hundimiento</string>
    <string name="imper">Imperceptibles</string>
    <string name="ligeros">Ligeros</string>
    <string name="muy_gran">Muy grandes</string>
    <string name="estruct_refor">¿La estructura ha sido reforzada?</string>
    <string name="protec_incen">¿Cuenta con protección contra incendios?</string>
    <string name="tipo_protec">Tipo de protección contra incendios</string>
    <string name="sprinklers">Sprinklers</string>
    <string name="hidr">Hidratantes</string>
    <string name="ciste">Cisterna</string>
    <string name="cuenca_hidra">Cuencas hidráulicas</string>
    <string name="esta_mete">Estaciones meteorológicas SMN</string>
    <string name="tipo_presas">Tipos de presas</string>
    <string name="uso_presas">Usos de presa</string>
    <string name="dist_pobla">Distancia hacia la población más cercana aguas abajo (km)</string>
    <string name="num_comp">Número de compuertas</string>
    <string name="tipo_comp">Tipo de compuertas</string>
    <string name="alt_comp">Altura de compuerta(s)</string>
    <string name="anc_comp">Ancho de compuerta(s)</string>
    <string name="comentarios">Comentarios</string>
    <string name="proposito">Proposito</string>
    <string name="tipo">Tipo</string>
    <string name="capacidad">Capacidad (m3/s)</string>
    <string name="eleva_um">Elevación del umbral</string>
    <string name="dimensiones">Dimensiones</string>
    <string name="tipos_obras">Tipo obras de tomas</string>
    <string name="ele_hm3">Elevación (hm3)</string>
    <string name="num_val">Número de válvulas</string>
    <string name="tipo_val">Tipo de válvulas</string>
    <string name="num_cond">Número de conductos (rejillas)</string>
    <string name="tipo_cond">Tipo de conductos</string>
    <string name="dimen_cond">Dimensión de conductos (mxm)</string>
    <string name="cuenta_rejillas">¿Cuenta con rejillas?</string>
    <string name="nombre_refer">Nombre / Referencia</string>
    <string name="lista_obras">Lista obras de toma</string>
</resources>