<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView 
		            android:id="@+id/textNombreFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:gravity="center"
            		android:background="#FF8C00"
		            android:layout_weight="1"
		            android:text="@string/nombre_refer"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        
		        <TextView 
		            android:id="@+id/textTipoFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/tipos_obras"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textCapacidadFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
            		android:background="#FF8C00"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/capacidad"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textElevacionFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/ele_hm3"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textNumeroFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
            		android:background="#FF8C00"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/num_comp"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textTipoComFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/tipo_comp"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textAnchoComFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
            		android:background="#FF8C00"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/anc_comp"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textAltoComFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/alt_comp"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textNumValFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
            		android:background="#FF8C00"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/num_val"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textTipoValFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/tipo_val"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textNumConFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
            		android:background="#FF8C00"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/num_cond"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		        <TextView 
		            android:id="@+id/textTipoCondFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/tipo_cond"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
		    <TextView 
		            android:id="@+id/textDimCondFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
            		android:background="#FF8C00"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/dimen_cond"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
	        <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:gravity="center_vertical|center">
				    <ImageView
				        android:id="@+id/imageCuentaRejillasFilaObras"
				        android:gravity="center_vertical|center"
				        android:layout_width="50dp"
				        android:layout_height="50dp"
				        android:adjustViewBounds="true"
				        android:scaleType="fitXY" />
		    </LinearLayout>
		    <TextView 
		            android:id="@+id/textComentariosFilaObras"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
            		android:background="#FF8C00"
		            android:gravity="center"
		            android:layout_weight="1"
		            android:text="@string/comentarios"
		            android:textAppearance="?android:attr/textAppearanceSmall"/>
        
    </LinearLayout>

</LinearLayout>