<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/textNombreFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FF8C00"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/nombre_refer"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textLongitudFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/longitud"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textLatitudFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="#FF8C00"
            android:layout_weight="1"
            android:text="@string/latitud"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/textAltitudFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/altitud"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView 
            android:id="@+id/textCuencasFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="#FF8C00"
            android:layout_weight="1"
            android:text="@string/cuenca_hidra"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textEstacionesFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/esta_mete"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textTipoFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="#FF8C00"
            android:layout_weight="1"
            android:text="@string/tipo_presas"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textUsoFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/uso_presas"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textDistanciaFilaUbicaciones"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="#FF8C00"
            android:layout_weight="1"
            android:text="@string/dist_pobla"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

</LinearLayout>