<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/textNombreFilaDesfogues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FF8C00"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/nombre_refer"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textTipoFilaDesfogues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/tipo"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textPropositoFilaDesfogues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FF8C00"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/proposito"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textCapacidadFilaDesfogues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/capacidad"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textElevacionFilaDesfogues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FF8C00"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/eleva_um"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textDimensionesFilaDesfogues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/dimensiones"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
        <TextView 
            android:id="@+id/textComentariosFilaDesfogues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FF8C00"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/comentarios"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>

</LinearLayout>