<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/PropertyImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/login_header" />

   <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ListaObras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/lista_obras"
            android:textSize="30sp"
            android:textStyle="italic" />

        
        <ImageButton
            android:id="@+id/buttonAgregarObras_dams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:background="@mipmap/agregar" />

    </LinearLayout>

   <HorizontalScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="vertical" > 
	
		    <LinearLayout 
		        android:background="@android:color/darker_gray"
		        android:layout_width="fill_parent"
		        android:layout_height="50dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:gravity="center"
		        android:orientation="horizontal">
		        <TextView 
		            android:id="@+id/textNombreObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/nombre_refer"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        
		        <TextView 
		            android:id="@+id/textTipoObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/tipos_obras"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textCapacidadObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/capacidad"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textElevacionObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/ele_hm3"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textNumeroCompObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/num_comp"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textTipoComObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/tipo_comp"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textAnchoComObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/anc_comp"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textAltoComObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/alt_comp"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textNumValObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/num_val"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textTipoValObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/tipo_val"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textNumConObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/num_cond"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        <TextView 
		            android:id="@+id/textTipoCondObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/tipo_cond"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		    <TextView 
		            android:id="@+id/textDimCondObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/dimen_cond"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		    <TextView 
		            android:id="@+id/textCuentaRejillasObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/cuenta_rejillas"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		    <TextView 
		            android:id="@+id/textComentariosObras"
		            android:gravity="center_horizontal"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/comentarios"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		    
		    </LinearLayout>
	
			<ListView
			    android:id="@+id/listObras_dams"
			    android:layout_width="match_parent"
			    android:layout_height="340dp"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="10dp"
			    android:layout_weight="0.66"
			    android:background="@android:color/background_light"
			    android:cacheColorHint="@android:color/transparent"
			    android:divider="@android:color/background_dark"
			    android:dividerHeight="2dp"
			    android:paddingBottom="5dp"
			    android:paddingLeft="8dp"
			    android:paddingRight="8dp"
			    android:paddingTop="5dp"
			    android:scrollbarStyle="outsideOverlay" >
			</ListView>
		</LinearLayout>
   </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/BotonesFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="870dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <ImageButton
            android:id="@+id/buttonSaveBotObras_dams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@mipmap/guardar" />

        <ImageButton
            android:id="@+id/buttonOutBotObras_dams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:background="@mipmap/salir" />
    </LinearLayout>

</LinearLayout>